--- a/style.css
+++ b/style.css
@@ -7,14 +7,17 @@
 }
 
 .sidebar {
+    position: absolute;
     background-color: rgb(168, 165, 165);
-    width: 334px;
+    /* width: 334px; */
     font-family: "Fira Sans", sans-serif;
     height: 100vh;
+    transition: transform 0.3s ease-in;
 }
 
 .sidebar nav {
     padding: 29px;
+    padding-top: 50px;
     font-size: 18px;
 }
 
@@ -48,23 +51,24 @@
 
 
 .hello{
-    font-size: 60px;
+    font-size: 3em;
 }
 .name{
-    font-size: 47px;
+    font-size: 3em;
     font-weight: bold;
     font-family: "Fira Sans", sans-serif;
 }
 .about{
-    font-size: 32px; 
+    font-size: 2.5em; 
 }
 .moreabout{
-    font-size: 22px;
+    font-size: 2em;
     margin-top: 23px;
     font-family: 'Fira Sans', sans-serif;
 }
 .buttons{
-    margin-top: 34px;
+    margin-top: 2.2em;
+    font-size: 6px;
 }
 .btn{
     padding: 9px 14px;
@@ -72,8 +76,8 @@
     color: white;
     background-color: dodgerblue;
     font-weight: bold;
-    font-size: 21px;
-    margin: 0 3px;
+    font-size: 2em;
+    margin: 3px 3px;
     cursor: pointer;
 }
 
@@ -89,6 +93,7 @@
 }
 
 .devInfo{
+    font-size: 10px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -96,13 +101,15 @@
     font-weight: 300;
 }
 
+
+
 .devPic img{
     height: 52vh;
 }
 .contactform{
     padding: 0 20px;
-    padding-top: 55px;
     font-family: 'Fira Sans', sans-serif;
+    margin: 88px;
 }
 .contactform h1{
     font-family: 'Source Code Pro', monospace;
@@ -115,10 +122,15 @@
 }
 
 .contactform form div input{
-    width: 26vw;
+    /* width: 26vw; */
     border-radius: 5px;
     margin: 6px 0 0 0;
     padding: 3px;
+}
+
+.contactform form{
+    /* width: 26vw; */
+    margin: 0 40px;
 }
 
 #emailHelp{
@@ -142,6 +154,10 @@
     font-family: 'Fira Sans', sans-serif;
 }
 
+.blogContainer{
+    margin: 88px;
+}
+
 h1{
     font-family: 'Fira Sans', sans-serif;
     margin: 23px;
@@ -149,6 +165,10 @@ h1{
 
 p{
     font-family: 'Source Code Pro', monospace;
+}
+
+.intro{
+    margin: 88px;
 }
 
 .intro h2{
@@ -192,3 +212,41 @@ p{
     width: 75px;
     background-color: yellow;
 }
+
+.sidebarGo{
+    transform: translate(-443px, 0px);
+    position: absolute;
+}
+
+.hamburger{
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    left: 10px;
+}
+
+.ham{
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.cross{
+    margin-left: 146px;
+    margin-top: 10px;
+}
+
+@media(max-width: 1615px){
+
+}
+
+.devPic{
+    display: none;
+}
+
+.intro, .blogContainer, .contactform{
+    margin: 50px 8px;
+}
+/* .sidebar{
+    transform: translate(-443px, 0px);
+    position: absolute;
+} */
